[metadata]
name = hubit
version = attr: hubit.VERSION
description = Minimal tool for connecting your existing models in a composite model allowing for asynchronous multi-processed execution
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = model, hub, multi-process, asynchronous
long_description_content_type = text/markdown
author = Jacob Sonne
author_email = mrsonne@gmail.com
url = https://github.com/mrsonne/hubit
license = BSD 3-Clause License
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Developers
        License :: OSI Approved :: BSD License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
package_dir=
    =.
packages = find:
install_requires =
    pyyaml
    graphviz
    python_version >= "3.8"

# extras_require = 

[options.packages.find]
where=.

[options.extras_require]
# "pytest>=5", "pytest-cov", "pylint", flake8,
dev = coverage
       black
       coveralls
       mypy
       types-PyYAML
       pytest